--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.68.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-map": "^0.0.1",
+    "react-native-maps": "0.30.2",
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
